tests/bad/array-copy-mismatch.pas
program array_copy_mismatch;
var
  a: array[1..2] of integer;
  b: array[1..3] of integer;
begin
  a := b;
end.
